k8s/routes/httproutes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pix-ingress
  namespace: pix
spec:
  ingressClassName: nginx
  rules:
    - host: api.dev.pix.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: app.dev.pix.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mon-pix
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: orga.dev.pix.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orga
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: admin.dev.pix.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: certif.dev.pix.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: certif
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: junior.dev.pix.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: junior
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: mailpit.dev.pix.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  number: 8025
